--- a/Backend/crm/src/main/resources/application.properties
+++ b/Backend/crm/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.password=root
 spring.datasource.username=root
-spring.datasource.url=dbc:mysql://database:3306/crm
+spring.datasource.url=jdbc:mysql://localhost:3306/crm
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.data.jpa.repositories.enabled=true
